[project]
name = "connect-llm"
version = "0.1.0"
authors = ["Rodrigo Suárez <rodrigosrz12@gmail.com>"]
description = "First project using LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.11.0",
    "langchain-community>=0.2.16",
    "langchain-core>=0.2.38",
    "langchain-groq>=0.1.9",
    "langchain-openai>=0.1.23",
    "langchain>=0.2.10",
    "pypdf>=4.3.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.6.4",
]
